# earthquake-tracker

./: .env.example  .gitignore  README.md  TODO.md  config.py  db_manager.py  docker-compose.yml  earthquake_scraper.py  init.sql  lint.sh  pyproject.toml  requirements.txt  run_scraper.py  setup.py  setup_and_run.py  test_database.py
.github/workflows/: ci.yml
src/earthquake_tracker/: __init__.py  config.py  database.py  models.py  scraper.py
