[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earthquake-tracker"
version = "0.1.0"
description = "Simple Python script to scrape earthquake data from KOERI website"
readme = "README.md"
requires-python = ">=3.7"
authors = [{name = "utkuyucel"}]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = []
unfixable = ["F401"]  # Don't auto-remove unused imports

[tool.ruff.lint.isort]
known-first-party = ["scraper", "config"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
